--- a/LaboratoriAnalizav/LaboratoriAnalizav/LaboratoriAnalizav.csproj
+++ b/LaboratoriAnalizav/LaboratoriAnalizav/LaboratoriAnalizav.csproj
@@ -8,6 +8,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
+    <PackageReference Include="MvcPaging" Version="2.1.13" />
+    <PackageReference Include="ReflectionIT.Mvc.Paging" Version="3.1.0" />
   </ItemGroup>
 
 </Project>
