--- a/LaboratoriAnalizav/LaboratoriAnalizav/appsettings.json
+++ b/LaboratoriAnalizav/LaboratoriAnalizav/appsettings.json
@@ -1,11 +1,12 @@
-{
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LaboratoriAnalizav-BEA2E9B8-8E24-4393-801E-15DF6E18D0B7;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=laboratoriIAnalizaDB;Trusted_Connection=True;"
+    },
+    "Logging": {
+      "LogLevel": {
+        "Default": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
