--- a/LaboratoriAnalizav/LaboratoriAnalizav/appsettings.json
+++ b/LaboratoriAnalizav/LaboratoriAnalizav/appsettings.json
@@ -1,7 +1,7 @@
 
   {
     "ConnectionStrings": {
-      "DefaultConnection": "Server=localhost\\VALENTINA;Database=laboratoriIAnalizaDB;Trusted_Connection=True;"
+      "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=laboratoriIAnalizaDB;Trusted_Connection=True;"
     },
     "Logging": {
       "LogLevel": {
